Upstream build with new version happened.
Removed customizations.
Updated readme.